# MuniConecta

./: .env.example  .gitignore  DEMO.md  Dockerfile  README.md  bot_telegram.py  dashboard.py  list_models.py  local_poll.py  main.py  main.tf  plan_vial.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_local.py  seed_demo_data.py  test_api.py  test_flujo.py
.github/workflows/: deploy.yml
app/: auth.py  config.py  database.py  logging_config.py  main.py  mock_database.py  websocket_manager.py
app/models/: schemas.py
app/routers/: admin.py  admin_crud.py  analiticas.py  anomalias.py  auditoria.py  auth.py  ciudadanos.py  dnrpa.py  estacionamiento.py  health.py  infracciones.py  inspector_pwa.py  ocr.py  pagos.py  qr_portal.py  tarifas.py  vehiculos_abonos.py  zonas.py
app/services/: abonos.py  alert_manager.py  anomaly_detector.py  auditoria.py  capacity.py  cierre_diario.py  comprobante.py  dnrpa_lookup.py  email_digest.py  geofence.py  mercadopago.py  notificador.py  ocr_engine.py  predictive_analytics.py  pricing.py  qr_generator.py  reporte_ejecutivo.py  schedule.py  scheduler.py  tarifas_especiales.py  vehiculo_historial.py
services/: gemini_service.py  telegram_client.py
supabase/migrations/: 001_create_estacionamientos.sql  002_create_zonas.sql  003_create_inspectores.sql  004_create_ciudadanos_y_comprobantes.sql  006_script_maestro.sql  (+3 more)
tests/: conftest.py  test_estacionamiento.py  test_fase3.py  test_mercadopago.py  test_notificador.py  test_nuevas_features.py  test_nuevos_schemas.py  test_pricing.py  test_schedule.py  test_schemas.py
(+2 files in other folders)
